Upgraded to Java 14 Used record types instead of @Data